src/scripts/components/h5p-crossword-input.scss
.h5p-crossword-input-container {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: var(--h5p-crossword-input-container-height);
  overflow-y: auto;
  width: 50%;

  .h5p-crossword-safari-firefox-wrapper {
    box-sizing: border-box;
    width: calc(100% - var(--scrollbar-width, 0px));

    .h5p-crossword-input-fields-group {
      color: var(--h5p-theme-text-primary);
      margin-top: var(--h5p-theme-spacing-s);

      .h5p-crossword-input-fields-group-title {
        font-weight: 600;
      }

      .h5p-crossword-input-fields-group-wrapper {
        display: flex;
        flex-direction: column;
        margin-bottom: var(--h5p-theme-spacing-s);

        .h5p-crossword-input-fields-group-wrapper-clue {
          align-items: baseline;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          line-height: 1.25em;

          .h5p-crossword-input-fields-group-clue-id {
            border-radius: 50%;
            flex-shrink: 0;
            font-style: italic;
            height: 1.75em;
            line-height: 1.75em;
            margin-right: 0.2em;
            text-align: center;
            width: 1.75em;
          }

          .h5p-crossword-input-fields-group-clue-content {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            align-items: baseline;

            .h5p-crossword-input-fields-group-clue {
              padding-right: var(--h5p-theme-spacing-xs);
            }

            .h5p-crossword-input-fields-group-answer-length {
              font-style: italic;
            }

            .h5p-crossword-input-fields-group-extra-clue {
              background: none;
              border: none;
              color: var(--h5p-theme-main-cta-base);
              cursor: pointer;
              padding-left: 0.3em;

              &:not(:disabled) {
                &:focus,
                &:hover {
                  color: var(--h5p-theme-main-cta-light);
                }

                &:active {
                  color: var(--h5p-theme-main-cta-dark);
                }
              }

              &:disabled {
                color: var(--h5p-theme-text-secondary);
                cursor: auto;
              }

              &::after {
                content: "\E88F";
                font-family: 'Material Icons';
                font-size: var(--h5p-theme-font-size-l);
                font-weight: 600;
              }
            }
          }

          &.h5p-crossword-input-fields-group-clue-highlight-focus .h5p-crossword-input-fields-group-clue-id {
            background-color: var(--h5p-theme-main-cta-base);
            color: var(--h5p-theme-ui-base);
            font-weight: 600;
          }
        }

        .h5p-crossword-input-fields-group-input {
          text-transform: uppercase;
          letter-spacing: 0.1em;
          margin-top: calc(0.25 * var(--h5p-theme-spacing-s));
          width: calc(100% - 8px); /* 8px = padding + border-width, TODO: Set in JS */
        }
      }
    }
  }

  &.has-scrollbar {
    &:not(.safari) {
      padding-right: var(--h5p-theme-spacing-s);
    }

    &.safari {
      overflow-y: scroll;

      &::-webkit-scrollbar {
        width: var(--scrollbar-width, 7px);
      }

      &::-webkit-scrollbar-thumb {
        background-color: rgba(0, 0, 0, 0.5);
        border-radius: var(--h5p-theme-border-radius-medium);
      }

      &::-webkit-scrollbar-track {
        background: rgba(0, 0, 0, 0.1);
      }
    }
  }
}

